[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://menu_button_style.tres" type="StyleBox" id=2]
[ext_resource path="res://font.tres" type="DynamicFont" id=3]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.168627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 460.0
margin_top = 206.0
margin_right = 563.0
margin_bottom = 393.0
custom_constants/separation = 14

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 103.0
margin_bottom = 53.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="New" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 103.0
margin_bottom = 120.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "New"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 103.0
margin_bottom = 187.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
